service TestService {
    rpc hello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    required string name = 1;
}

message HelloReply {
    required string message = 1;
}